--- a/frontend/home.css
+++ b/frontend/home.css
@@ -14,7 +14,7 @@ nav {
     background-color: #fff;
     overflow: hidden;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     max-width: 500px;
     border-radius: 10px;
     border:2px solid black;
@@ -23,13 +23,16 @@ nav {
 nav a {
     color: purple;
     padding: 14px 20px;
-    padding-right: 80px;
-    padding-left: 20px;
     text-decoration: none;
     font-size: large;
     font-weight: bold;
 }
 nav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
+    animation:slidebg 5s linear infinite;
 }
+@keyframes slidebg {
+    to {
+      background-position:20vw;
+    }
+  }
